--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+server.port=8082
+#타임리프 사용시 수정하고 새로고침하면 바로 반영되도록 설정
+spring.thymeleaf.cache=false
+#템플릿 위치에 파일이 있는지 체크, 없으면 에러날 수 있다.
+spring.thymeleaf.check-template-location=true
+#devtools 리로드 기능 켜기 (정적 자원 수정시 브라우저 새로고침 없이 바로 적용)
+spring.devtools.livereload.enabled=true
+#데이터베이스를 사용하기 위한 설정추가
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username=C##dbexam
+spring.datasource.password=m1234
+#JSP경로설정
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
