24-02-07 | 장창엽 | myBand, band_write 초안 작성 작업도 10%

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 server.port=8082
-#타임리프 사용시 수정하고 새로고침하면 바로 반영되도록 설정
+#íìë¦¬í ì¬ì©ì ìì íê³  ìë¡ê³ ì¹¨íë©´ ë°ë¡ ë°ìëëë¡ ì¤ì 
 spring.thymeleaf.cache=false
-#템플릿 위치에 파일이 있는지 체크, 없으면 에러날 수 있다.
+#ííë¦¿ ìì¹ì íì¼ì´ ìëì§ ì²´í¬, ìì¼ë©´ ìë¬ë  ì ìë¤.
 spring.thymeleaf.check-template-location=true
-#devtools 리로드 기능 켜기 (정적 자원 수정시 브라우저 새로고침 없이 바로 적용)
+#devtools ë¦¬ë¡ë ê¸°ë¥ ì¼ê¸° (ì ì  ìì ìì ì ë¸ë¼ì°ì  ìë¡ê³ ì¹¨ ìì´ ë°ë¡ ì ì©)
 spring.devtools.livereload.enabled=true
-#데이터베이스를 사용하기 위한 설정추가
+#ë°ì´í°ë² ì´ì¤ë¥¼ ì¬ì©íê¸° ìí ì¤ì ì¶ê°
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=C##dbexam
 spring.datasource.password=m1234
-#JSP경로설정
+#JSP 스
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
