24-02-07 | 권광호 | index 페이지 1차 작업, index02.css, index.js, search.css 파일 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=C##dbexam
 spring.datasource.password=m1234
-#JSP 스
+#JSP 스ㄴ
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
