--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.datasource.password=m1234
 #JSP 스ㄴ
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+# Enable validation
+spring.mvc.validation.enabled=true
+
+# Set validation message locale
+spring.mvc.locale=en_US
