--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
 server.port=8082
-#íìë¦¬í ì¬ì©ì ìì íê³  ìë¡ê³ ì¹¨íë©´ ë°ë¡ ë°ìëëë¡ ì¤ì 
+#JSP경로설정
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+#타임리프 사용시 수정하고 새로고침하면 바로 반영되도록 설정
+# Thymeleaf 설정
+spring.thymeleaf.prefix: classpath:/templates/
+spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache=false
-#ííë¦¿ ìì¹ì íì¼ì´ ìëì§ ì²´í¬, ìì¼ë©´ ìë¬ë  ì ìë¤.
+spring.thymeleaf.view-names=thymeleaf/*
+#템플릿 위치에 파일이 있는지 체크, 없으면 에러날 수 있다.
 spring.thymeleaf.check-template-location=true
-#devtools ë¦¬ë¡ë ê¸°ë¥ ì¼ê¸° (ì ì  ìì ìì ì ë¸ë¼ì°ì  ìë¡ê³ ì¹¨ ìì´ ë°ë¡ ì ì©)
+#devtools 리로드 기능 켜기 (정적 자원 수정시 브라우저 새로고침 없이 바로 적용)
 spring.devtools.livereload.enabled=true
-#ë°ì´í°ë² ì´ì¤ë¥¼ ì¬ì©íê¸° ìí ì¤ì ì¶ê°
+#데이터베이스를 사용하기 위한 설정추가
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=C##dbexam
 spring.datasource.password=m1234
-#JSP 스ㄴ
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-# Enable validation
-spring.mvc.validation.enabled=true
-
-# Set validation message locale
-spring.mvc.locale=en_US
+#myBatis를 사용하기 위한 설정 추가 : resource폴더 안의 mybatis/mapper안의 모든 폴더 안에 모든 xml파일을 매퍼로 사용 하겠다.
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**xml
