--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.username=C##dbexam
 spring.datasource.password=m1234
 #myBatis를 사용하기 위한 설정 추가 : resource폴더 안의 mybatis/mapper안의 모든 폴더 안에 모든 xml파일을 매퍼로 사용 하겠다.
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**xml
+#파일크기 제한 설정을 안하면 디폴트값은 파일 하나당 1MB
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 50MB
