--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
-
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-parameters"]
+}
 repositories {
 	mavenCentral()
 }
