--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ dependencies {
 	//jsp를 사용하려면 필요한 라이브러리 jasper 설치 사용을 위한 의존성 주입
 	implementation group: 'jakarta.servlet.jsp.jstl', name: 'jakarta.servlet.jsp.jstl-api'
 	//c태그를 사용하기 위한 의존성 주입
+	
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 }
 
 tasks.named('test') {
