--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 server.port=8082
-#JSP경로설정
+#JSPê²½ë¡ì¤ì 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-#타임리프 사용시 수정하고 새로고침하면 바로 반영되도록 설정
-# Thymeleaf 설정
+#íìë¦¬í ì¬ì©ì ìì íê³  ìë¡ê³ ì¹¨íë©´ ë°ë¡ ë°ìëëë¡ ì¤ì 
+# Thymeleaf ì¤ì 
 spring.thymeleaf.prefix: classpath:/templates/
 spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache=false
 spring.thymeleaf.view-names=thymeleaf/*
-#템플릿 위치에 파일이 있는지 체크, 없으면 에러날 수 있다.
+#ííë¦¿ ìì¹ì íì¼ì´ ìëì§ ì²´í¬, ìì¼ë©´ ìë¬ë  ì ìë¤.
 spring.thymeleaf.check-template-location=true
-#devtools 리로드 기능 켜기 (정적 자원 수정시 브라우저 새로고침 없이 바로 적용)
+#devtools ë¦¬ë¡ë ê¸°ë¥ ì¼ê¸° (ì ì  ìì ìì ì ë¸ë¼ì°ì  ìë¡ê³ ì¹¨ ìì´ ë°ë¡ ì ì©)
 spring.devtools.livereload.enabled=true
-#데이터베이스를 사용하기 위한 설정추가
+#ë°ì´í°ë² ì´ì¤ë¥¼ ì¬ì©íê¸° ìí ì¤ì ì¶ê°
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=C##dbexam
 spring.datasource.password=m1234
-#myBatis를 사용하기 위한 설정 추가 : resource폴더 안의 mybatis/mapper안의 모든 폴더 안에 모든 xml파일을 매퍼로 사용 하겠다.
+#myBatisë¥¼ ì¬ì©íê¸° ìí ì¤ì  ì¶ê° : resourceí´ë ìì mybatis/mapperìì ëª¨ë  í´ë ìì ëª¨ë  xmlíì¼ì ë§¤í¼ë¡ ì¬ì© íê² ë¤.
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**xml
-#파일크기 제한 설정을 안하면 디폴트값은 파일 하나당 1MB
+#íì¼í¬ê¸° ì í ì¤ì ì ìíë©´ ëí´í¸ê°ì íì¼ íëë¹ 1MB
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 50MB
