--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/**xml
 #íì¼í¬ê¸° ì í ì¤ì ì ìíë©´ ëí´í¸ê°ì íì¼ íëë¹ 1MB
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 50MB
+
+server.error.path= /error
