--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	//c태그를 사용하기 위한 의존성 주입
 	
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 }
 
 tasks.named('test') {
